--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="col-lg-5 col-xl-6">
                         <div class="hero-elem container-fluid text-center">
-                            <img src="assets/images/trump-1.png" alt="" class="img-fluid">
+                            <img src="assets/images/Logo (1).png" alt="" class="img-fluid">
                         </div>
                     </div>
                 </div>
